--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <li><a href="signup.html">Sign up</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
+    <!-- Início Carousel Página Principal -->
+
+    <!-- Fim Carousel Página Principal -->
 </body>
-<h1>eu como pão</h1>
 
 </html>
