--- a/signup.html
+++ b/signup.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./css/stylesignup.css">
-		<link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-		<title>Sign up</title>
-	</head>
-	<body>
-		<ul class="menu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="shopping.html">Shopping</a></li>
-			<li><a href="innovations.html">Innovations</a></li>
-			<li><a href="signup.html">Sign up</a></li>
-			<li><a href="about.html">About</a></li>
-		</ul>
-		
-		
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="./css/stylesignup.css">
+	<link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
+	<title>Sign up</title>
+</head>
+
+<body>
+	<ul class="menu">
+		<li><a href="index.html">Home</a></li>
+		<li><a href="products.html">Products</a></li>
+		<li><a href="shopping.html">Shopping</a></li>
+		<li><a href="innovations.html">Innovations</a></li>
+		<li><a href="signup.html">Sign up</a></li>
+		<li><a href="about.html">About</a></li>
+	</ul>
+
+	<div class="box">
+		<form action="">
+			<fieldset>
+				<legend><b>CADASTRE-SE</b></legend>
+				<br>
+				<div class="inputBox">
+					<input type="text" name="nome" id="nome" class="inputUser" required>
+					<label for="nome">Nome Completo</label>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+
+</body>
+
 </html>
