--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="about.html">About</a></li>
     </ul>
     <!-- Início Carousel Página Principal -->
-
+    <h1>Página inicial</h1>
     <!-- Fim Carousel Página Principal -->
 </body>
 
