--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/css/styleindex.css">
+    <link rel="stylesheet" href="./css/styleindex.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
 </head>
 
@@ -14,12 +14,10 @@
         <li><a href="products.html">Products</a></li>
         <li><a href="shopping.html">Shopping</a></li>
         <li><a href="innovations.html">Innovations</a></li>
-        <li><a href="signup.html">Sign up</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" id="sobre">About</a></li>
+        <li><a href="signup.html" id="cadastro">Sign up</a></li>
+
     </ul>
-    <!-- Início Carousel Página Principal -->
-    <h1>Página inicial</h1>
-    <!-- Fim Carousel Página Principal -->
 </body>
 
 </html>
