--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="shopping.html">Shopping</a></li>
-        <li><a href="innovations.html">Innovations</a></li>
-        <li><a href="about.html" id="sobre">About</a></li>
-        <li><a href="signup.html" id="cadastro">Sign up</a></li>
-
-    </ul>
+    <nav>
+        <div id="menu1">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="shopping.html">Shopping</a>
+            <a href="innovations.html">Innovations</a>
+        </div>
+        <div id="menu2">
+            <a id="cadastro" href="signup.html">Sign up</a>
+            <a id="sobre" href="about.html">About</a>
+        </div>
+    </nav>
 </body>
 
 </html>
