--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Inova+ | Home</title>
     <link rel="stylesheet" href="./css/styleindex.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
 </head>
 
 <body>
     <nav>
+        <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
         <div id="menu1">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
@@ -17,7 +18,9 @@
             <a href="innovations.html">Innovations</a>
         </div>
         <div id="menu2">
-            <a id="cadastro" href="signup.html">Sign up</a>
+            <a class="cadastro" href="signup.html">
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+            </a>
             <a id="sobre" href="about.html">About</a>
         </div>
     </nav>
