--- a/about.html
+++ b/about.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./css/styleabout.css">
-		<link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-		<title>About</title>
-	</head>
-	<body>
-		<ul class="menu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="shopping.html">Shopping</a></li>
-			<li><a href="innovations.html">Innovations</a></li>
-			<li><a href="signup.html">Sign up</a></li>
-			<li><a href="about.html">About</a></li>
-		</ul>
-		<br><br>
-		<div class="criadores">
-			<div class="enzo">
-				<img src="./Imagens/Fotos/enzo.jpg" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
-				<p>Enzo Lian Pinheiro Mendes</p>
-			</div>
-			<div class="raissa">
-				<img src="./Imagens/Fotos/raíssa.jpg" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">	
-				<p>Raíssa Ribeiro Pinheiro</p>
-			</div>
-		</div>
 
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/styleabout.css">
+    <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
+    <title>Inova+ | About</title>
+</head>
+
+<body>
+    <nav>
+        <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
+        <div id="menu1">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="shopping.html">Shopping</a>
+            <a href="innovations.html">Innovations</a>
+        </div>
+        <div id="menu2">
+            <a class="cadastro" href="signup.html">
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+            </a>
+            <a id="sobre" href="about.html">About</a>
+        </div>
+    </nav>
+    <br><br>
+    <div class="criadores">
+        <div class="enzo">
+            <img src="./Imagens/Fotos/enzo.jpg" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
+            <p>Enzo Lian Pinheiro Mendes</p>
+        </div>
+        <div class="raissa">
+            <img src="./Imagens/Fotos/raíssa.jpg" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">
+            <p>Raíssa Ribeiro Pinheiro</p>
+        </div>
+    </div>
+
+</body>
+
 </html>
