--- a/innovations.html
+++ b/innovations.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styleinnovations.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-    <title>Innovations</title>
+    <title>Inova+ | Innovations</title>
 </head>
 
 <body>
-    <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="shopping.html">Shopping</a></li>
-        <li><a href="innovations.html">Innovations</a></li>
-        <li><a href="signup.html">Sign up</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul>
+    <nav>
+        <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
+        <div id="menu1">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="shopping.html">Shopping</a>
+            <a href="innovations.html">Innovations</a>
+        </div>
+        <div id="menu2">
+            <a class="cadastro" href="signup.html">
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+            </a>
+            <a id="sobre" href="about.html">About</a>
+        </div>
+    </nav>
 
 
 </body>
