--- a/products.html
+++ b/products.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<title>Products</title>
-		<link rel="stylesheet" href="./css/styleproducts.css">
-		<link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-	</head>
-	<body>
-		<ul class="menu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="shopping.html">Shopping</a></li>
-			<li><a href="innovations.html">Innovations</a></li>
-			<li><a href="signup.html">Sign up</a></li>
-			<li><a href="about.html">About</a></li>
-		</ul>
-	</body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Inova+ | Products</title>
+    <link rel="stylesheet" href="./css/styleproducts.css">
+    <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
+</head>
+
+<body>
+    <nav>
+        <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
+        <div id="menu1">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="shopping.html">Shopping</a>
+            <a href="innovations.html">Innovations</a>
+        </div>
+        <div id="menu2">
+            <a class="cadastro" href="signup.html">
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+            </a>
+            <a id="sobre" href="about.html">About</a>
+        </div>
+    </nav>
+</body>
+
 </html>
