--- a/innovations.html
+++ b/innovations.html
@@ -24,8 +24,86 @@
             <a id="sobre" href="about.html">About</a>
         </div>
     </nav>
-
-
+    <div class="videos">
+        <hr>
+        <br>
+        <div class="esquerda" id="video1">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/y7KxKws5Voc?si=oCL7ig_bidieSVi7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>
+                Conheça o <strong>Surface Laptop Studio 2</strong> da Microsoft<br><br> <i>Original Microsoft</i>
+            </p>
+            <img src="./Imagens/Icone/laptop1.png" alt="Ícone de notebook" title="Ícone de notebook">
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="direita" id="video2">
+            <img src="./Imagens/Icone/laptop2.png" alt="Ícone de notebook" title="Ícone de notebook">
+            <p>
+                Conheça o novo <strong>Surface Pro</strong> da Microsoft <strong>*RECENTE*</strong><br><br> <i>Original Microsoft</i>
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jg1ZxdBFEYg?si=xREkFbKBSFzYJj18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="esquerda" id="video3">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SYpA7JpoLQM?si=nizxxjwVPiwlFCRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>
+                Descubra o que é <strong>NPU</strong> a partir deste vídeo da Microsoft <br><br> <i>Original Microsoft</i>
+            </p>
+            <img src="./Imagens/Icone/cpu.png" alt="Ícone de uma CPU" title="Ícone de uma CPU">
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="direita" id="video4">
+            <img src="./Imagens/Icone/laptop3.png" alt="Ícone de notebook" title="Ícone de notebook">
+            <p>
+                Conheça o <strong>Galaxy Book4 Edge</strong> da Samsung <br><br> <i>Original Samsung</i>
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/y60VeRU2V1Y?si=OoakBJbRPf3NAXQv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="esquerda" id="video5">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ShmsKSAmtMY?si=mnxn5nwkSKCtjUSm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>
+                Conheça o primeiro <strong>Notebook ASUS que integra Copilot + PC</strong> <br><br> <i>Original ASUS</i>
+            </p>
+            <img src="./Imagens/Icone/laptop 4.png" alt="Ícone de notebook" title="Ícone de notebook">
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="direita" id="video6">
+            <img src="/Imagens/Icone/laptop 5.png" alt="Ícone de notebook" title="Ícone de notebook">
+            <p>
+                Confira esse unboxing de <strong>notebooks com IA</strong> <br><br> <i>Original Samsung</i>
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ya2Syb5XN3g?si=6d44pZcp6OnvSBPJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="esquerda" id="video7">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/AjB70319iZc?si=pRkGk4TG0EjdwNiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>
+                Confira <strong>6 mitos ou verdades</strong> tecnológicos <br><br> <i>Original DELL</i>
+            </p>
+            <img src="./Imagens/Icone/mitoouverdade.png" alt="Ícone de certo ou errado" title="Ícone de certo ou errado">
+        </div>
+        <br>
+        <hr>
+    </div>
 </body>
 
 </html>
