--- a/about.html
+++ b/about.html
@@ -13,25 +13,25 @@
         <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
         <div id="menu1">
             <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="shopping.html">Shopping</a>
-            <a href="innovations.html">Innovations</a>
+            <a href="products.html">Periféricos</a>
+            <a href="shopping.html">Carrinho</a>
+            <a href="innovations.html">Inovações</a>
         </div>
         <div id="menu2">
             <a class="cadastro" href="signup.html">
-                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Cadastre-se
             </a>
-            <a id="sobre" href="about.html">About</a>
+            <a id="sobre" href="about.html">Sobre</a>
         </div>
     </nav>
     <br><br>
     <div class="criadores">
         <div class="enzo">
-            <img src="./Imagens/Fotos/enzo.jpg" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
+            <img src="./Imagens/Fotos/devs/enzo.jpg" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
             <p>Enzo Lian Pinheiro Mendes</p>
         </div>
         <div class="raissa">
-            <img src="./Imagens/Fotos/raíssa.jpg" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">
+            <img src="./Imagens/Fotos/devs/raíssa.jpg" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">
             <p>Raíssa Ribeiro Pinheiro</p>
         </div>
     </div>
