--- a/innovations.html
+++ b/innovations.html
@@ -13,15 +13,15 @@
         <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
         <div id="menu1">
             <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="shopping.html">Shopping</a>
-            <a href="innovations.html">Innovations</a>
+            <a href="products.html">Periféricos</a>
+            <a href="shopping.html">Carrinho</a>
+            <a href="innovations.html">Inovações</a>
         </div>
         <div id="menu2">
             <a class="cadastro" href="signup.html">
-                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Sign up
+                <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Cadastre-se
             </a>
-            <a id="sobre" href="about.html">About</a>
+            <a id="sobre" href="about.html">Sobre</a>
         </div>
     </nav>
     <div class="videos">
