--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div id="menu1">
             <a href="index.html">Home</a>
             <a href="products.html">Periféricos</a>
-            <a href="shopping.html">Carrinho</a>
+            <a href="shopping.html"><img src="./Imagens/Icone/carrinho.png" id="carrinho" alt="Ícone de carrinho de compras" title="Ícone de carrinho de compras">Carrinho</a>
             <a href="innovations.html">Inovações</a>
         </div>
         <div id="menu2">
@@ -27,12 +27,22 @@
     <br><br>
     <div class="criadores">
         <div class="enzo">
-            <img src="./Imagens/Fotos/devs/enzo.jpg" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
-            <p>Enzo Lian Pinheiro Mendes</p>
+            <img src="./Imagens/Fotos/devs/enzo.png" alt="Foto do aluno Enzo Lian Pinheiro Mendes" title="Foto do aluno Enzo Lian Pinheiro Mendes">
+            <details>
+                <summary>Enzo Lian Pinheiro Mendes</summary>
+                <div class="caracteristicas">
+                    Estudando Desenvolvimento de Sistemas na Etec Fernando Prestes<br> Gosta de passar seu tempo jogando e estudando<br> A procura de um emprego na área
+                </div>
+            </details>
         </div>
         <div class="raissa">
-            <img src="./Imagens/Fotos/devs/raíssa.jpg" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">
-            <p>Raíssa Ribeiro Pinheiro</p>
+            <img src="./Imagens/Fotos/devs/raíssa.png" id="rai" alt="Foto da aluna Raíssa Ribeiro Pinheiro" title="Foto da aluna Raíssa Ribeiro Pinheiro">
+            <details>
+                <summary>Raíssa Ribeiro Pinheiro</summary>
+                <div class="caracteristicas">
+                    Estudando Desenvolvimento de Sistemas na Etec Fernando Prestes<br> Estagiária de Marketing na Espaço Contabilidade<br> Interessada em Desenvolvimento Web e Design
+                </div>
+            </details>
         </div>
     </div>
 
