--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="menu1">
             <a href="index.html">Home</a>
             <a href="products.html">Periféricos</a>
-            <a href="shopping.html">Carrinho</a>
+            <a href="shopping.html"><img src="./Imagens/Icone/carrinho.png" id="carrinho" alt="Ícone de carrinho de compras" title="Ícone de carrinho de compras">Carrinho</a>
             <a href="innovations.html">Inovações</a>
         </div>
         <div id="menu2">
