--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
         <div id="menu1">
             <a href="index.html">Home</a>
             <a href="products.html">Periféricos</a>
-            <a href="shopping.html">Carrinho</a>
+            <a href="shopping.html"><img src="./Imagens/Icone/carrinho.png" id="carrinho" alt="Ícone de carrinho de compras" title="Ícone de carrinho de compras">Carrinho</a>
             <a href="innovations.html">Inovações</a>
         </div>
         <div id="menu2">
@@ -26,6 +26,12 @@
     </nav>
 
     <div class="box">
+        <div class="botao_home">
+            <a href="index.html">
+                <img src="Imagens/Icone/programming.ico" alt="Logo" title="Logo">
+                <p>Ir para Home --></p>
+            </a>
+        </div>
         <form action="">
             <fieldset>
                 <legend><b>CADASTRE-SE</b></legend>
@@ -85,7 +91,14 @@
                 <input type="submit" name="submit" id="submit">
             </fieldset>
         </form>
+        <div class="botao_carrinho">
+            <a href="shopping.html">
+                <p>Ir para o Carrinho --></p>
+                <img src="Imagens/Icone/carrinhobranco.png" alt="Carrinho" title="Carrinho">
+            </a>
+        </div>
     </div>
+
 
 </body>
 
