--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <a id="logo" href="index.html"><img src="./Imagens/Icone/programming.ico">Inova+</a>
         <div id="menu1">
             <a href="index.html">Home</a>
-            <a href="products.html">Periféricos</a>
-            <a href="shopping.html"><img src="./Imagens/Icone/carrinho.png" id="carrinho" alt="Ícone de carrinho de compras" title="Ícone de carrinho de compras">Carrinho</a>
-            <a href="innovations.html">Inovações</a>
+            <a href="periféricos.html">Periféricos</a>
+            <a href="carrinho.html"><img src="./Imagens/Icone/carrinho.png" id="carrinho" alt="Ícone de carrinho de compras" title="Ícone de carrinho de compras">Carrinho</a>
+            <a href="inovações.html">Inovações</a>
         </div>
         <div id="menu2">
-            <a class="cadastro" href="signup.html">
+            <a class="cadastro" href="cadastro.html">
                 <img src="./Imagens/Icone/user.png" id="usuario" alt="Ícone de usuário" title="Ícone de usuário"> Cadastre-se
             </a>
-            <a id="sobre" href="about.html">Sobre</a>
+            <a id="sobre" href="sobre.html">Sobre</a>
         </div>
     </nav>
 
