--- a/periféricos.html
+++ b/periféricos.html
@@ -24,6 +24,173 @@
             <a id="sobre" href="sobre.html">Sobre</a>
         </div>
     </nav>
+    <div id="catalogo">
+        <div class="card">
+            <img src="Imagens/Fotos/mouses/m720-redragon.jpg" title="Mouse Gamer" alt="Mouse Gamer" class="perifericos-img">
+            <div>
+                <h1>Mouse M720</h1>
+                <span>R$ 173,77</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/mouses/m808-redragon.jpg" title="Mouse Gamer" alt="Mouse Gamer" class="perifericos-img">
+            <div>
+                <h1>Mouse M808</h1>
+                <span>R$ 199,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/mouses/razer-death.jpg" title="Mouse Gamer" alt="Mouse Gamer" class="perifericos-img">
+            <div>
+                <h1>Mouse Razer</h1>
+                <span>R$174,74</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/mouses/cobra2-redragon.jpg" title="Mouse Gamer" alt="Mouse Gamer" class="perifericos-img">
+            <div>
+                <h1>Mousen Cobra 2</h1>
+                <span>R$ 149,90</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/mouses/logitech-g305.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Mouse G305</h1>
+                <span>R$ 239,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div id="catalogo">
+        <div class="card">
+            <img src="Imagens/Fotos/teclados/teclado-mecanico-mkw100.jpg" title="Teclado Gamer" alt="Teclado Gamer" class="perifericos-img">
+            <div>
+                <h1>Teclado MKW100</h1>
+                <span>R$ 269,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/teclados/teclado-mecanico-kumara.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Teclado Kumara</h1>
+                <span>R$ 169,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/teclados/teclado-k500-b61.jpg" title="Teclado Gamer" alt="Teclado Gamer" class="perifericos-img">
+            <div>
+                <h1>Teclado K500-B61</h1>
+                <span>R$183,90</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/teclados/teclado-mecanico-hyrax.jpg" title="Teclado Gamer" alt="Teclado Gamer" class="perifericos-img">
+            <div>
+                <h1>Teclado Hyrax</h1>
+                <span>R$ 199,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/teclados/teclado-mecanico-gpro-k7.jpg" title="Teclado Gamer" alt="Teclado Gamer" class="perifericos-img">
+            <div>
+                <h1>Teclado GPRO K7</h1>
+                <span>R$ 189,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div id="catalogo">
+        <div class="card">
+            <img src="Imagens/Fotos/headsets/headset-hyperx.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Headset HyperX</h1>
+                <span>R$208,00</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/headsets/headset-redragon-mento.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Headset Mento</h1>
+                <span>R$152,80</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/headsets/headset-gamer-havit.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Headset Gamer Havit</h1>
+                <span>R$ 175,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/headsets/headset-havit-hv.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Headset Havit HV</h1>
+                <span>R$177,57</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Imagens/Fotos/headsets/headset-redragon-lamia.jpg" title="computador gamer" alt="computador gamer" class="perifericos-img">
+            <div>
+                <h1>Headset Lamia 2</h1>
+                <span>R$ 149,99</span>
+                <button>Comprar</button>
+            </div>
+        </div>
+    </div>
+
+    <br><br>
+
+    <div class="titulo-destaque">
+        <h1><img src="Imagens/Icone/destaque.png" class="img-destaque">Destaques</h1>
+    </div>
+
+    <div class="destaque">
+        <dl>
+            <div class="destaques">
+                <dt>1. Mouse gamer Cobra 2</dt>
+                <dd>O melhor custo benefício do mercado, custando apenas R$ 149,90.</dd>
+            </div>
+            <div class="destaques">
+                <dt>2. Teclado mecânico Kumara</dt>
+                <dd>O mais procurado entre os gamers pela sua qualidade!.</dd>
+            </div>
+            <div class="destaques">
+                <dt>3. Headset Gamer Hyper X</dt>
+                <dd>Headset de maior qualidade num preço acessível!.</dd>
+            </div>
+        </dl>
+    </div>
 </body>
 
 </html>
