--- a/carrinho.html
+++ b/carrinho.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Inova+ | Shopping</title>
+    <title>Inova+ | Carrinho</title>
     <link rel="stylesheet" href="./css/stylecarrinho.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
 </head>
