--- a/periféricos.html
+++ b/periféricos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Inova+ | Products</title>
+    <title>Inova+ | Periféricos</title>
     <link rel="stylesheet" href="./css/styleperiféricos.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
 </head>
