--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/stylesobre.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-    <title>Inova+ | About</title>
+    <title>Inova+ | Sobre</title>
 </head>
 
 <body>
