--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/stylecadastro.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-    <title>Inova+ | Sign up</title>
+    <title>Inova+ | Cadastre-se</title>
 </head>
 
 <body>
