--- a/inovações.html
+++ b/inovações.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styleinovações.css">
     <link rel="icon" href="./Imagens/Icone/programming.ico" type="x-icon">
-    <title>Inova+ | Innovations</title>
+    <title>Inova+ | Inovações</title>
 </head>
 
 <body>
