--- a/inovações.html
+++ b/inovações.html
@@ -83,7 +83,7 @@
         <hr>
         <br>
         <div class="direita" id="video6">
-            <img src="/Imagens/Icone/laptop 5.png" alt="Ícone de notebook" title="Ícone de notebook">
+            <img src="./Imagens/Icone/laptop 5.png" alt="Ícone de notebook" title="Ícone de notebook">
             <p>
                 Confira esse unboxing de <strong>notebooks com IA</strong> <br><br> <i>Original Samsung</i>
             </p>
